--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': '2.34.1',
-          'reportUuid': '8feb9310-6642-4b25-9a12-89f393bb798e',
+          'reportUuid': 'a07987d4-bfae-4f2d-b6bd-6163ef556374',
           'single_file': false
         });
     </script>
+  <script src="analytics/inject-analytics.js"></script>
 </body>
 </html>
